--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <section class="header">
     <nav>
-      <a href="index_copy.html"><img src="../web/image/nousagi.png"></a>
+      <a href="index_copy.html"><img src="https://github.com/Jmain26/kiana.github.io/blob/main/image/nousagi.png"></a>
       <div class="nav-links" id="navLinks">
         <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
         <ul>
@@ -78,14 +78,14 @@
 
     <div class="row">
       <div class="campus-col">
-        <img  src="../web/image/vertikal.png">
+        <img  src="https://github.com/Jmain26/kiana.github.io/blob/main/image/vertikal.png">
         <div class="layer">
           <h3>USADA PEKORA</h3>
         </div>
       </div>
 
       <div class="campus-col">
-        <img  src="../web/image/vertikal.png">
+        <img  src="https://github.com/Jmain26/kiana.github.io/blob/main/image/vertikal.png">
         <div class="layer">
           <h3>USADA PEKORA</h3>
         </div>
@@ -94,7 +94,7 @@
 
       <div class="campus-col">
         <a href="../web/index_copy.html">
-        <img  src="../web/image/vertikal.png">
+        <img  src="https://github.com/Jmain26/kiana.github.io/blob/main/image/vertikal.png">
         <div class="layer">
           <h3>USADA PEKORA</h3>
 
@@ -118,7 +118,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
 
         <div class="row">
-          <div class="othersite-col">
+          <div class="https://github.com/Jmain26/kiana.github.io/blob/main/image/kiana.png">
             <img src="../web/image/kiana.png">
             <div class="stuff">
             <h3>Kiana is the best</h3>
@@ -128,7 +128,7 @@
           </div>
 
           <div class="othersite-col">
-            <img src="../web/image/kiana.png">
+            <img src="https://github.com/Jmain26/kiana.github.io/blob/main/image/kiana.png">
             <div class="stuff">
             <h3>Kiana is the best</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -137,7 +137,7 @@
           </div>
 
           <div class="othersite-col">
-            <img src="image\kiana.png">
+            <img src="https://github.com/Jmain26/kiana.github.io/blob/main/image/kiana.png">
             <div class="stuff">
             <h3>Kiana is the best</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
