--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="with=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="https://jmain26.github.io/kiana.github.io/style.css">
+  <link rel="shortcut icon" href="../web/image/1195158.ico">
   <title>USADA PEKORA</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://kit.fontawesome.com/e22b0b2e38.js" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
 <body>
   <section class="header">
     <nav>
-      <a href="index_copy.html"><img src="https://github.com/Jmain26/kiana.github.io/blob/main/image/nousagi.png"></a>
+      <a href="index_copy.html"><img src="../web/image/nousagi.png"></a>
       <div class="nav-links" id="navLinks">
         <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
         <ul>
@@ -78,14 +78,14 @@
 
     <div class="row">
       <div class="campus-col">
-        <img  src="https://github.com/Jmain26/kiana.github.io/blob/main/image/vertikal.png">
+        <img  src="../web/image/vertikal.png">
         <div class="layer">
           <h3>USADA PEKORA</h3>
         </div>
       </div>
 
       <div class="campus-col">
-        <img  src="https://github.com/Jmain26/kiana.github.io/blob/main/image/vertikal.png">
+        <img  src="../web/image/vertikal.png">
         <div class="layer">
           <h3>USADA PEKORA</h3>
         </div>
@@ -94,7 +94,7 @@
 
       <div class="campus-col">
         <a href="../web/index_copy.html">
-        <img  src="https://github.com/Jmain26/kiana.github.io/blob/main/image/vertikal.png">
+        <img  src="../web/image/vertikal.png">
         <div class="layer">
           <h3>USADA PEKORA</h3>
 
@@ -118,7 +118,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
 
         <div class="row">
-          <div class="https://github.com/Jmain26/kiana.github.io/blob/main/image/kiana.png">
+          <div class="othersite-col">
             <img src="../web/image/kiana.png">
             <div class="stuff">
             <h3>Kiana is the best</h3>
@@ -128,7 +128,7 @@
           </div>
 
           <div class="othersite-col">
-            <img src="https://github.com/Jmain26/kiana.github.io/blob/main/image/kiana.png">
+            <img src="../web/image/kiana.png">
             <div class="stuff">
             <h3>Kiana is the best</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -137,10 +137,10 @@
           </div>
 
           <div class="othersite-col">
-            <img src="https://github.com/Jmain26/kiana.github.io/blob/main/image/kiana.png">
+            <img src="../web/image/kiana.png">
             <div class="stuff">
             <h3>Kiana is the best</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit
             </p>
             </div>
           </div>
@@ -158,6 +158,32 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+<!--java scipt for menu toogle-->
+  <script>
+    var navLinks = document.getElementById('navLinks')
+
+    function showMenu(){
+    navLinks.style.right = "0";
+    }
+
+    function hideMenu(){
+      navLinks.style.right = "-200px";
+    }
+
+
+  </script>
+</body>
+  </html>
 
 
 
