--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
 
           <div class="othersite-col">
-            <img src="../web/image/kiana.png">
+            <img src="https://github.com/Jmain26/kiana.github.io/blob/main/kiana.png?raw=true">
             <div class="stuff">
             <h3>Kiana is the best</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit
