--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="with=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="../web/image/1195158.ico">
+  <link rel="shortcut icon" href="https://github.com/Jmain26/kiana.github.io/blob/main/image/nousagi.png?raw=true">
   <title>USADA PEKORA</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://kit.fontawesome.com/e22b0b2e38.js" crossorigin="anonymous"></script>
@@ -78,14 +78,14 @@
 
     <div class="row">
       <div class="campus-col">
-        <img  src="../web/image/vertikal.png">
+        <img  src="https://github.com/Jmain26/kiana.github.io/blob/main/image/vertikal.png?raw=true">
         <div class="layer">
           <h3>USADA PEKORA</h3>
         </div>
       </div>
 
       <div class="campus-col">
-        <img  src="../web/image/vertikal.png">
+        <img  src="https://github.com/Jmain26/kiana.github.io/blob/main/image/vertikal.png?raw=true">
         <div class="layer">
           <h3>USADA PEKORA</h3>
         </div>
@@ -94,7 +94,7 @@
 
       <div class="campus-col">
         <a href="../web/index_copy.html">
-        <img  src="../web/image/vertikal.png">
+        <img  src="https://github.com/Jmain26/kiana.github.io/blob/main/image/vertikal.png?raw=true">
         <div class="layer">
           <h3>USADA PEKORA</h3>
 
@@ -119,7 +119,7 @@
 
         <div class="row">
           <div class="othersite-col">
-            <img src="../web/image/kiana.png">
+            <img src="https://github.com/Jmain26/kiana.github.io/blob/main/image/kiana.png?raw=true">
             <div class="stuff">
             <h3>Kiana is the best</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -128,7 +128,7 @@
           </div>
 
           <div class="othersite-col">
-            <img src="https://github.com/Jmain26/kiana.github.io/blob/main/kiana.png">
+            <img src="https://github.com/Jmain26/kiana.github.io/blob/main/image/kiana.png?raw=true">
             <div class="stuff">
             <h3>Kiana is the best</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit
@@ -137,7 +137,7 @@
           </div>
 
           <div class="othersite-col">
-            <img src="https://github.com/Jmain26/kiana.github.io/blob/main/kiana.png?raw=true">
+            <img src="https://github.com/Jmain26/kiana.github.io/blob/main/image/kiana.png?raw=true">
             <div class="stuff">
             <h3>Kiana is the best</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit
