--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="with=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="https://github.com/Jmain26/kiana.github.io/blob/main/image/nousagi.png?raw=true">
+  <link rel="shortcut icon" href="https://raw.githubusercontent.com/Jmain26/kiana.github.io/main/image/1195158.ico">
   <title>USADA PEKORA</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://kit.fontawesome.com/e22b0b2e38.js" crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
 <body>
   <section class="header">
     <nav>
-      <a href="index_copy.html"><img src="../web/image/nousagi.png"></a>
+      <a href="index_copy.html"><img src="https://github.com/Jmain26/kiana.github.io/blob/main/image/nousagi.png?raw=true"></a>
       <div class="nav-links" id="navLinks">
         <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
         <ul>
